# python-project-template

./: .gitignore  PRE_COMMIT_SETUP.md  README.md  TEMPLATE_README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup_project.ps1  setup_project.sh
src/your_package/: __init__.py  main.py
tests/: test_main.py
